# metacoadd

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: conda-installation.yml  pip-installation.yml  python-package.yml
data/pre_selection_3/: 2236611s_24.header  2243596s_28.header
examples/: run_metacoadd_mdet.py  run_ngmix_mdet.py
metacoadd/: __init__.py  coadd.py  detect.py  exposure.py  exposure_bound.py  fitting.py  metacal.py  metacal_new.py  metacal_oversampling.py  metacoadd.py  metacoadd_ngmix_det.py  metadetect.py  simu.py  swarp_wrapper.py  uberseg.py  utils.py
metacoadd/fitters/: fourier_fitting.py  fourier_fitting_nb.py
metacoadd/gmix_fourier/: __init__.py  gmix_fourier_nb.py
metacoadd/moments/: galsim_admom.py  galsim_admom_nb.py  galsim_regauss.py  galsim_regauss_nb.py  ngmix_admom.py  ngmix_admom_nb.py  pseudo_regauss.py  wmom_runner.py
metacoadd/simu/: __init__.py  simu.py
notebooks/: desc_sim_test_metacoadd.ipynb  desc_sim_test_metacoadd_plots.ipynb  desc_sim_test_simplecoadd.ipynb  test_metadetect.ipynb  test_simplecoadd.ipynb
test/: basic_tests.py  test_basic.py  test_simplecoadd.py
