[build-system]
requires = ["setuptools>=64.0", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metacoadd"
version = "0.0.1"
authors = [
  { name="Axel Guinot", email="axel.guinot.astro@gmail.com" },
]
description = "Shear image and coadd them to run metadetection"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numba>0.54",
    "galsim>=2.4",
    "reproject>=0.12",
    "metadetect @ git+https://github.com/esheldon/metadetect.git",
    "ngmix @ git+https://github.com/esheldon/ngmix.git",
    "esutil>=0.6",
    "pyfftw>=0.12"
]

[project.urls]
"Homepage" = "https://github.com/aguinot/metacoadd"
"Bug Tracker" = "https://github.com/aguinot/metacoadd/issues"

[project.optional-dependencies]
dev = ["pre-commit", "black", "ruff"]
test = ["pytest", "pytest-cov", "pytest-mock", "joblib", "tqdm", "astropy", "matplotlib"]

[tool.setuptools]
packages = ["metacoadd", "metacoadd.moments", "metacoadd.simu"]

[tool.ruff]
select = ["E", "F", "UP", "I"]
line-length = 80
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 80
target-version = ['py37']
